--- a/src/components/AllWords/AllWords.module.scss
+++ b/src/components/AllWords/AllWords.module.scss
@@ -1,11 +1,15 @@
 .allWordsBox {
     padding: 30px 20px;
     position: absolute;
-    top: -20vh;
-    bottom: 0;
-    right: -20vw;
-    left: 0;
+    // top: -20vh;
+    top: 0;
+    // bottom: 0;
+    // right: -20vw;
+    left: 20vw;
+    right: 0;
+    // left: 0;
     background: rgba(196, 196, 196, 0.79);
+    min-height: 100%;
     // .paginatorBox {
     //     .paginator {
     //         display: grid;
