--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,5 +1,5 @@
 .container {
-  position: relative;
+  // position: relative;
   grid-area: container;
-  width: 100%;
+  min-width: 100%;
   }
