--- a/src/components/Dictionary/Dictionary.module.scss
+++ b/src/components/Dictionary/Dictionary.module.scss
@@ -1,9 +1,13 @@
 .dictionary {
+  position: absolute;
   grid-area: dictionary;
   padding: 40px 0;
   .bgImg {
-    width: 100%;
-    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 20vw;
+    height: 95%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
