--- a/src/components/Paginator/Paginator.module.scss
+++ b/src/components/Paginator/Paginator.module.scss
@@ -1,10 +1,11 @@
 .paginatorBox {
+    margin: 20px 0;
     .paginator {
         display: grid;
         grid-template-columns: auto auto auto;
         justify-content: space-between;
-        position: absolute;
-        bottom: 0;
+        // position: absolute;
+        // bottom: 0;
         padding: 10px 0;
         width: 95%;
         button {
