--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,6 +1,6 @@
 .searchBox {
     position: relative;
-    padding-bottom: 50px;
+    padding-bottom: 10px;
     background: rgba(255, 255, 255, 0.58);
     border-radius: 10px;
     input {
